--- a/eat-healthy/style.css
+++ b/eat-healthy/style.css
@@ -6,21 +6,49 @@ body{
     margin: 0;
 }
 h1{
-    font-size: 30px;
+    font-size: 40px;
 }
 h2{
-    font-size: 20px;
+    display: flex;
+    font-size: 30px;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 10%;
+    
+
 }
-.half-width{
+h3{ 
+    display: flex;
+
+    font-size: 30px;
+    
+    margin-left: 5%;
+
+}
+p{
     width: 50%;
-    padding: 2%;
+    margin-top: 2%;
+}
+
+
+.half-width-text{
+    width: 100%;
+    height: 10%;
+    padding: 5%;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 .half-width img{
-    width: 80%;
+    width:50%;
+    padding-left: 40px;
+    background-position: bottom;
+    margin-top: 20%;
+
 }
 .flexible-container{
     display: flex;
-    margin-bottom: 150px;
+    margin-bottom: 130px;
+
 
 }
 .link-button{
@@ -30,10 +58,50 @@ h2{
     border-radius: 40px;
     color:white;
     font-weight: 700;
-    background-position: bottom;
+    margin-bottom: 40px;
+    
+    
     
 }
 .about-me{
     background-image: url(images/background-img-bg.png);
     background-repeat: no-repeat;
+    background-position: center;
+    
+    
+    
+    
 }
+.about-recipie{
+    
+    text-align: center;
+    top: 50%;
+    left: 50%;
+
+}
+.box{
+    box-shadow: 10px 10px 40px gray;
+    width: 50%;
+    margin-right: 5%;
+    margin-left: 5%;
+    padding-left: 5px;
+    border-radius: 10px;
+    background-size: 700px;
+    text-align: center;
+    
+}
+img{
+    border-radius: 5px;
+    border-top:2%;
+    padding: 2px;
+    width: 100%;
+    
+}
+
+    
+#image-area{
+    margin: 0%;
+    padding: ;
+}   
+    
+    
