--- a/eat-healthy/style.css
+++ b/eat-healthy/style.css
@@ -57,7 +57,7 @@ p{
     padding: 10px 30px;
     border-radius: 40px;
     color:white;
-    font-weight: 700;
+    font-weight: 700px;
     margin-bottom: 40px;
     
     
@@ -97,11 +97,6 @@ img{
     width: 100%;
     
 }
-
-    
-#image-area{
-    margin: 0%;
-    padding: ;
-}   
+ 
     
     
